# path

./: .gitignore  404.html  CNAME  README.md  all.pqt  all.pqt.dvc  avg_weekday_month_grouped.json  avg_weekday_month_grouped.json.dvc  avg_weekend_month_grouped.json  avg_weekend_month_grouped.json.dvc  bt-ezpass.pqt  bt-ezpass.pqt.dvc  bt-traffic.pqt  bt-traffic.pqt.dvc  entries_vs_exits.pqt  entries_vs_exits.pqt.dvc  environment.yml  gsheet.ipynb  hourly.pqt  hourly.pqt.dvc  index.html  monthly.ipynb  months.ipynb  og.png.dvc  parse-hourly.ipynb  parse_bt.py  pie-map-24h.gif.dvc  pie-map-24h.mp4.dvc  pyproject.toml  requirements.txt  weekdays.json  weekdays.json.dvc  weekends.json  weekends.json.dvc
.dvc/: config
.github/workflows/: ci.yml  update-path-data.yml  www.yml
.ire/: avg weekday_month_grouped.png.json  avg weekend_month_grouped.png.json  avg_day_types.json  path.parquet  vs_2019.json  weekdays.json  weekdays_2020:.json  weekends.json  weekends_2020:.json
assets/: Airports-35zNOlqQ.js  Airports-BCA-hctM.js  Airports-CclXHGwJ.js  Airports-CqTySknR.js  Airports-Dqz5Eopj.js  Airports-yh6YCArU.js  BridgeTunnel-0G9ZQBrE.js  BridgeTunnel-82xSWvw3.js  BridgeTunnel-B6Sc8-38.js  BridgeTunnel-B8hPYVvI.js  BridgeTunnel-BBS2yXpz.js  BridgeTunnel-BCWY7PL1.js  BridgeTunnel-BGCgPw9z.js  BridgeTunnel-BOy2NWEP.js  BridgeTunnel-BPb4FzaG.js  BridgeTunnel-BacUfqE3.js  BridgeTunnel-C0w9cKxY.js  BridgeTunnel-C4Bmiz6l.js  BridgeTunnel-C51O7sFH.js  BridgeTunnel-C7LMpQGD.js  BridgeTunnel-CAcPysS0.js  BridgeTunnel-CHLa_dZl.js  BridgeTunnel-CLRKpfGq.js  BridgeTunnel-CP7eBpZJ.js  BridgeTunnel-CSx-cP2k.js  BridgeTunnel-CUo6toF9.js  BridgeTunnel-CZf4Of9u.js  BridgeTunnel-CbyOBxez.js  BridgeTunnel-Cjsqbydr.js  BridgeTunnel-Cp-wfp3i.js  BridgeTunnel-D44jJjSn.js  BridgeTunnel-D619KUeH.js  BridgeTunnel-DBLuAjK3.js  BridgeTunnel-DBObGWQw.js  BridgeTunnel-DE_RO_jP.js  BridgeTunnel-DQ5h4Muf.js  BridgeTunnel-DQoQdvZI.js  BridgeTunnel-DZF4MoFD.js  BridgeTunnel-D_qwmP2S.js  BridgeTunnel-DjXpecOL.js  (+168 more)
bt/: index.html
data/: .gitignore  2012-day-types.pqt  2012-day-types.pqt.dvc  2012.pqt  2012.pqt.dvc  2013-PATH-Monthly-Ridership-Report.pdf.dvc  2013-day-types.pqt.dvc  2013.pqt  2013.pqt.dvc  2014-PATH-Monthly-Ridership-Report.pdf.dvc  2014-day-types.pqt  2014-day-types.pqt.dvc  2014.pqt  2014.pqt.dvc  2015-day-types.pqt  2015-day-types.pqt.dvc  2015.pqt  2015.pqt.dvc  2016-day-types.pqt  2016-day-types.pqt.dvc  2016.pqt  2016.pqt.dvc  2017-PATH-Monthly-Ridership-Report.pdf.dvc  2017-PATH-hourly-Ridership-Report.pdf.dvc  2017-day-types.pqt  2017-day-types.pqt.dvc  2017-hourly-system.pqt.dvc  2017-hourly-total.pqt.dvc  2017-hourly.pqt.dvc  2017.pqt  2017.pqt.dvc  2018-PATH-Monthly-Ridership-Report.pdf.dvc  2018-PATH-hourly-Ridership-Report.pdf.dvc  2018-day-types.pqt  2018-day-types.pqt.dvc  2018-hourly-system.pqt.dvc  2018-hourly-total.pqt.dvc  2018-hourly.pqt.dvc  2018.pqt  2018.pqt.dvc  (+92 more)
data/bt/: .gitignore  ezpass.pqt  ezpass.pqt.dvc  traffic.pqt  traffic.pqt.dvc
img/: avg_day_types.json  avg_weekday_month_grouped.json  avg_weekend_month_grouped.json  path.parquet  vs_2019.json  weekdays.json  weekdays_2020:.json  weekends.json  weekends_2020:.json
map/: index.html
path_data/: atd.py  entries_vs_exits.py  monthly.py  months.py  parse_hourly.py  paths.py  publish_static.py  utils.py
path_data/cli/: base.py  combine.py  gha_update.py  main.py  refresh.py  slack.py  update.py
scripts/: README.md  add-dvc-computations.py  h3.py  update-all.sh  vs_2019.py
specs/: automate-pipeline.md  bridge-tunnel-pipeline.md  custom-og-images.md  fix-og-image-dimensions.md  fix-www-deploy.md  hourly-data-pipeline.md  per-station-pages.md  port-pipelines-to-dvx.md
specs/done/: automate-pipeline.md  pltly-bump-remove-fade-workaround.md  pltly-dark-mode.md  station-filtering.md
templates/: 2022-PATH-Monthly-Ridership-Report.tabula-template.json  2023-PATH-Monthly-Ridership-Report.tabula-template.json
www/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  scrns.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
www/e2e/: budgets.json  day-type-sync.spec.ts  legend-interaction.spec.ts  performance.spec.ts  pin-sync.spec.ts  scroll-anchor.spec.ts  ym-sync.spec.ts
www/public/: .gitignore  all.pqt.dvc  atd-flights.pqt.dvc  atd-ground.pqt.dvc  avg_weekday_month_grouped.json.dvc  avg_weekend_month_grouped.json.dvc  bt-ezpass.pqt.dvc  bt-traffic.pqt.dvc  entries_vs_exits.json.dvc  entries_vs_exits.pqt.dvc  hourly.pqt.dvc  og-bt.png.dvc  og-map.jpg.dvc  og.png.dvc  pie-map-24h.gif.dvc  pie-map-24h.mp4.dvc  publish-static.dvc  weekdays.json.dvc  weekends.json.dvc
www/scripts/: assemble-gif.sh  banner-diff.ts  capture-gifs.ts  capture-og.ts  prerender-routes.mjs  prerender-routes.test.mjs  record-map.mjs  strip-dvc-artifacts.mjs
www/specs/: hyparquet-migration.md  performance-tests.md  plotly-perf.md  pltly-hide-mode-flicker.md  scrns-gifs.md
www/src/: ABPBanner.tsx  Airports.tsx  BTFlowMap.tsx  Body.mdx  BridgeTunnel.tsx  EntriesVsExitsBars.tsx  HourlyPlot.tsx  LinePlots.tsx  Lines.tsx  MonthlyPlots.tsx  PathPlots.tsx  RidesPlot.tsx  StationDropdown.tsx  StationPlots.tsx  StationsMap.tsx  ThemeContext.tsx  Tooltip.tsx  YmInput.tsx  bt-crossings-geo.ts  dayTypes.ts  entries-vs-exits-data.ts  index.scss  main.tsx  mdx.d.ts  nice-step.test.ts  nice-step.ts  parquet-compressors.ts  plot-utils.tsx  plot.scss  speed-dial-icons.tsx  static-urls.ts  stations-geo.ts  stations.ts  useScrollAnchor.ts  useTraceLegend.ts  vite-env.d.ts  ymRange.ts
