[project]
name = "path-data"
version = "0.0.1"
description = "PATH ridership data analysis and visualization"
requires-python = ">=3.11"
dependencies = [
    "dvx[s3] @ git+https://github.com/runsascoded/dvx@9f462bf19",
    "fastparquet==2024.11.0",
    "ipython",  # required by `utz.plots` (imports `IPython.display.Image`)
    "joblib",
    "kaleido<1.3",  # 1.3.0 regressed Timestamp JSON serialization (og.png et al)
    "numpy>=2",
    "openpyxl==3.1.5",
    "pandas>=3",
    "plotly<6.8",  # 6.8.0 added `defaults.headers={'X-Requested-With': 'plotly.py'}` which propagates into Kaleido kopts → `Chromium.__init__` rejects unknown kwarg ("Chromium.get_cli() received invalid args: dict_keys(['headers'])"), every CI render (og.png + monthly PNGs) silently fails
    "pypdf",  # maintained successor to PyPDF2 (`PdfReader` API is compatible)
    # Transitive pins to clear Dependabot alerts — s3fs/aiobotocore/dvc chain.
    # Grouped here (not per-line comments) since none of these are used directly.
    "aiohttp>=3.14.1",         # 20 CVEs on <3.14.1 (dvx[s3] → s3fs → aiobotocore)
    "bleach>=6.4.0",           # XSS via SVG (nbconvert transitive)
    "cryptography>=46.0.7",    # 4 CVEs (paramiko / requests chain)
    "dulwich>=1.2.5",          # 4 CVEs (dvc transitive)
    "GitPython>=3.1.48",       # 5 CVEs (dvc transitive)
    "idna>=3.15",              # DoS (requests transitive)
    "mistune>=3.2.1",          # ReDoS + XSS (nbconvert transitive)
    "orjson>=3.11.6",          # DoS (papermill transitive)
    "Pygments>=2.20.0",        # ReDoS (nbconvert transitive)
    "asyncssh>=2.23.0",        # AuthorizedKeysFile %u path traversal
    "pydantic-settings>=2.14.2", # NestedSecretsSettingsSource symlink follow
    "pytest>=9.0.3",           # vulnerable tmpdir handling
    "python-dotenv>=1.2.2",    # symlink follow in `set_key`
    "requests>=2.33.0",        # cred forwarding across redirects
    "urllib3>=2.7.0",          # 4 high CVEs (redirect header leak + decompression bombs)
    "uv>=0.11.15",  # arbitrary file write through entry points; also for `uv run parse_bt.py` inline-metadata isolation
    "tabula-py",
    "thrds @ git+https://github.com/runsascoded/thrds@3cb9a0f",
    "utz",
    "xlsxwriter",
]

# Optional EDA-only deps. The pipeline runs without these — they're only
# needed for running the legacy `*.ipynb` notebooks interactively as
# reference/exploration.
[project.optional-dependencies]
eda = [
    "jupyter",
    "jupyter-server>=2.20.0",  # CVE-2024-... ; jupyterlab 3.x pins to jupyter-server 1.x, force 2.x
    "jupyterlab>=4",  # jupyterlab 3.x pulls jupyter-server 1.24.0 (13 CVEs); 4.x uses jupyter-server 2.x
    "juq.py>=0.5.1",
    "nbconvert>=7.17.1",  # mistune 3+ (fixes ReDoS + XSS CVEs) + nbconvert-specific fixes
    "papermill",
    "tornado>=6.5.7",
]

[project.scripts]
path-data = "path_data.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["path_data"]
